feat: add CtreateTransaction endpoint (#26)
* feat: add CtreateTransaction endpoint

* chore: fix typo
