# transports/http/endpoints/api/transactions/model.go
@@ -3,6 +3,6 @@ package transactions
 // CreateTransaction represents request for creating new transaction.
 type CreateTransaction struct {
 	Password  string `json:"password"`
-	Recipient string `json:"recipent"`
+	Recipient string `json:"recipient"`
 	Satoshis  uint64 `json:"satoshis"`
 }
